--- a/SellingMobileApp.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SellingMobileApp.Web/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,12 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+            @{
+                var user = UserManager.GetUserAsync(User).Result; 
+                var userName = user?.UserName; 
+            }
+
+           <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @userName</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
