Fixed logIn page; start working on Controllers

--- a/SellingMobileApp.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SellingMobileApp.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -16,7 +16,7 @@
             <!-- Email field -->
             <div class="form-floating mb-3">
                 <input asp-for="Input.UserEmail" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.UserEmail">UserEmail</label>
+                <label asp-for="Input.UserEmail">User Email</label>
                 <span asp-validation-for="Input.UserEmail" class="text-danger"></span>
             </div>
 
@@ -37,7 +37,7 @@
             <!-- New UserName field -->
             <div class="form-floating mb-3">
                 <input asp-for="Input.Name" class="form-control" aria-required="true" placeholder="UserName" />
-                <label asp-for="Input.Name">Name</label>
+                <label asp-for="Input.Name">User Name</label>
                 <span asp-validation-for="Input.Name" class="text-danger"></span>
             </div>
 
