--- a/SellingMobileApp.Web/Views/Shared/_Layout.cshtml
+++ b/SellingMobileApp.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,14 @@
                         </li>
                         <!--li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>-->                      
+                        </li-->    
+
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="MobilleApp" asp-action="Add">Create Listing</a>
+                                </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
