--- a/SellingMobileApp.Web/Views/MobilleApp/Add.cshtml
+++ b/SellingMobileApp.Web/Views/MobilleApp/Add.cshtml
@@ -33,7 +33,8 @@
 
     <div class="form-group">
         <label asp-for="ReleaseDate" class="control-label"></label>
-        <input asp-for="ReleaseDate" class="form-control" type="date" />
+        <input asp-for="ReleaseDate" class="form-control" type="text"
+               value="@DateTime.Now.ToString("dd-MM-yyyy")" readonly />
         <span asp-validation-for="ReleaseDate" class="text-danger"></span>
     </div>
 
@@ -53,7 +54,8 @@
 
     <div class="form-group">
         <label asp-for="PhoneCharacteristic.ManufactureYear" class="control-label">Година на производство</label>
-        <input asp-for="PhoneCharacteristic.ManufactureYear" class="form-control" type="number" />
+        <input asp-for="PhoneCharacteristic.ManufactureYear" class="form-control" type="date"
+               value="@(Model.PhoneCharacteristic.ManufactureYear.ToString("dd-MM-yyyy") ?? "")" />
         <span asp-validation-for="PhoneCharacteristic.ManufactureYear" class="text-danger"></span>
     </div>
 
@@ -79,6 +81,8 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Добави обявата</button>
+
+   
 </form>
 
 @section Scripts {
