Fix Category funcionality; Create details page and visual layout; Create funcionality button "Details" on listing - all page

--- a/SellingMobileApp.Web/Views/MobilleApp/All.cshtml
+++ b/SellingMobileApp.Web/Views/MobilleApp/All.cshtml
@@ -44,7 +44,7 @@
                     <button class="btn btn-outline-warning btn-sm mb-2 w-100" disabled>Редактиране</button>
                 </div>
                 <div class="col-6 px-1">
-                    <button class="btn btn-outline-info btn-sm mb-2 w-100" disabled>Детайли</button>
+                    <a href="@Url.Action("Details", "MobilleApp", new { id = listing.Id })" class="btn btn-outline-info btn-sm mb-2 w-100">Детайли</a>
                 </div>
             </div>
         </div>
