--- a/SellingMobileApp.Web/Views/MobilleApp/Add.cshtml
+++ b/SellingMobileApp.Web/Views/MobilleApp/Add.cshtml
@@ -76,12 +76,11 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="CategoryListing" class="control-label">Категория</label>
-        <select asp-for="CategoryListing" class="form-control">
-            <option value="Нов">Нов</option>
-            <option value="Употребяван">Употребяван</option>
+        <label asp-for="CategoryId" class="control-label"></label>
+        <select asp-for="CategoryId" class="form-control" asp-items="@(new SelectList(Model.CategoryListings, "Id", "Name"))">
+            <option value="">Изберете категория</option>
         </select>
-        <span asp-validation-for="CategoryListing" class="text-danger"></span>
+        <span asp-validation-for="CategoryId" class="text-danger"></span>
     </div>
 
     <button type="submit" class="btn btn-primary">Създай обява</button>
