--- a/SellingMobileApp.Web/Views/MobilleApp/Details.cshtml
+++ b/SellingMobileApp.Web/Views/MobilleApp/Details.cshtml
@@ -15,7 +15,7 @@
                 <div class="mb-3">
                     <p><strong>Цена:</strong> <span style="color: black;">@Model.Price лв.</span></p>
                     <p><strong>Описание:</strong> @Model.Description</p>
-                    <p><strong>Категория:</strong> @Model.CategoryListing.Name</p>
+                    <p><strong>Състояние:</strong> @Model.CategoryListing.Name</p>
                     <p><strong>Имейл:</strong> <a href="mailto:@Model.UserEmail">@Model.UserEmail</a></p>
                     <p><strong>Телефон:</strong> <span style="color: black;">@Model.UserPhoneNumber</span></p>
                 </div>
