--- a/SellingMobileApp.Web/Views/MobilleApp/Details.cshtml
+++ b/SellingMobileApp.Web/Views/MobilleApp/Details.cshtml
@@ -31,6 +31,7 @@
         </div>
     </div>
 
+    <!-- Бутон за връщане към всички обяви -->
     <div class="text-center mt-4">
         <a href="@Url.Action("All", "MobilleApp")" class="btn btn-secondary btn-lg">
             &larr; Назад към всички обяви
