--- a/SellingMobileApp.Web/Views/Shared/_Layout.cshtml
+++ b/SellingMobileApp.Web/Views/Shared/_Layout.cshtml
@@ -35,6 +35,10 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="MobilleApp" asp-action="Add">Create Listing</a>
                             </li>
+                            <!-- Добавяме бутон за любими обяви -->
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="MobilleApp" asp-action="MyFavourite">My Favourite Listings</a>
+                            </li>
                         }
                     </ul>
                     <partial name="_LoginPartial" />
