--- a/SellingMobileApp.Web/Views/MobilleApp/Details.cshtml
+++ b/SellingMobileApp.Web/Views/MobilleApp/Details.cshtml
@@ -1,5 +1,8 @@
 ﻿@model SellingMobileApp.Data.Models.ViewModels.DetailsViewModel
 
+@{
+    var currentUserId = ViewData["CurrentUserId"]?.ToString();
+}
 <div class="container my-4">
     <h1 class="text-center mb-4">@Model.Title</h1>
 
@@ -31,11 +34,12 @@
         </div>
     </div>
 
-    <!-- Бутон за връщане към всички обяви -->
     <div class="text-center mt-4">
-        <a href="@Url.Action("All", "MobilleApp")" class="btn btn-secondary btn-lg">
+        <a href="@Url.Action("All", "MobilleApp")" class="btn btn-secondary btn-lg me-2">
             &larr; Назад към всички обяви
         </a>
+
+        
     </div>
 </div>
 
