Added edit listings funcionality

--- a/SellingMobileApp.Web/Views/MobilleApp/Details.cshtml
+++ b/SellingMobileApp.Web/Views/MobilleApp/Details.cshtml
@@ -26,7 +26,7 @@
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><strong>Марка:</strong> @Model.PhoneModel.Brand</li>
                     <li class="list-group-item"><strong>Модел:</strong> @Model.PhoneModel.Model</li>
-                    <li class="list-group-item"><strong>Година на производство:</strong> @Model.PhoneModel.ManufactureYear.ToString("dd.MM.yyyy'г.'")</li>
+                    <li class="list-group-item"><strong>Дата на производство:</strong> @Model.PhoneModel.ManufactureYear.ToString("dd.MM.yyyy'г.'")</li>
                     <li class="list-group-item"><strong>Вътрешна памет:</strong> @Model.PhoneModel.StorageCapacity GB</li>
                     <li class="list-group-item"><strong>RAM памет:</strong> @Model.PhoneModel.RamCapacity GB</li>
                 </ul>
